Fixed contact layout on mobile

--- a/app/src/css/pages/contact.css
+++ b/app/src/css/pages/contact.css
@@ -204,3 +204,10 @@
     outline: none;
     border: 1px solid rgb(var(--yellow-color));
 }
+
+
+@media (max-width: 800px) {
+    .contact form {
+        padding: 20px 15px;
+    }
+}
